Revision history for Github-Backup

1.02 UNREL
        -

1.01    2018-02-11
        - added repos() and issues()
        - added tests
        - added github_backup binary
        - added prereq JSON
        - cleaned up POD tests; we skip accessor sub docs
        - we create repo directories under issues dir only if the repo has any
          issues

0.01    Date/time
        - First version, released on an unsuspecting world.
        - added Travis-CI and Coveralls.io integration

