@@ -1,7 +1,8 @@
 Revision history for Github-Backup
 
 1.02 UNREL
-        -
+        - fix missing newline backslash in SYNOPSIS
+        - added new "FUTURE DIRECTION" POD heading
 
 1.01    2018-02-11
         - added repos() and issues()
